--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,8 @@ lib_deps =
     NTPClient
     WiFiManager
     Time
+    ESP8266WebServer
+    ArduinoJson@^6.21.3
 build_flags =
     -D HARDWARE_TYPE=MD_MAX72XX::FC16_HW
     -D MAX_DEVICES=4
